# tdmd-toolbox

./: .gitignore  README.md  pyproject.toml
examples/: cylinder_flow.py  dmd-cylinder.ipynb  dmd-plasm.ipynb  dmd-plasma.ipynb  dmd-temporal-graph.ipynb  plasma_flow.py  tdmd-cylinder.ipynb  tdmd-plasm.ipynb  tdmd-plasma.ipynb  tdmd-temporal-graph.ipynb  temporal_graphs.py
tdmd/: __init__.py
tdmd/core/: __init__.py  decomposition.py  dmd.py  tensor_product.py
tdmd/tests/: test_decomposition.py  test_dmd.py
