[project]
name = "TDMD-toolbox"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.2",
    "matplotlib>=3.10.8",
    "pydmd>=0.4.1",
    "pytest>=9.0.3",
    "rich>=14.3.3",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]

[tool.black]
line-length = 100
